--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -28,7 +28,8 @@ h1, h2, h3, h4 {
 }
 
 .date {
-    color: #CF2115;
+    color: #ff9400;
+    
 }
 
 .save {
@@ -53,3 +54,5 @@ h1, h2, h3, h4 {
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
+
+
